# Carnal_Abyss

./: RoadMap.md  comp.ps1
bsp-engine/: compile.ps1
bsp-engine/native/: CMakeLists.txt
bsp-engine/native/src/: main.cpp
bsp-engine/shaders/: triangle.vert
native/: CMakeLists.txt
native/src/: main.cpp
native/src/input/: InputState.h
native/src/scripting/: EngineModule.cpp  EngineModule.h  PythonHost.cpp  PythonHost.h
python/: game.py
